# roytracker

./: CMakeLists.txt  README.md
roytracker/: roytracker.cpp  roytracker.cpp.autosave  roytracker.hpp
roytracker/trackers/: mean_shift_tracker.cpp  mean_shift_tracker.h
samples/: CMakeLists.txt
tests/: CMakeLists.txt  test_track_2_view.cpp
